--- a/index.html
+++ b/index.html
@@ -49,23 +49,26 @@
 <body>
   <header>
     <h1>Welcome to AcousticPay</h1>
-    <p>Your trusted payment solutions platform</p>
+    <p>AcousticPay is an Artificial Intelligence driven Top Notch Audible Payment System for B2B</p>
   </header>
   <main>
-    <h2>About AcousticPay</h2>
+
+    <h2>How AcousticPay works? </h2>
     <p>
-      AcousticPay is dedicated to providing secure and user-friendly payment solutions for individuals and businesses. Our platform is designed to simplify transactions, ensuring reliability, speed, and transparency.
-    </p>
+
+      AcousticPay technology bi-directional approach to exchange sensitive payment credentials. In this approach, both party uses same levels of security, Transport Layer Security. 
+
+  </br>
+    
+      A client having AcousticPay application initiates a mobile payment through their mobile device. Using the  State of the Art technology of AcousticPay, ultrasonic or in-audible data transmission occurs, through, a secure tri-communication among the mobile device, server and POS (Point of Sale) terminal via microphone and speaker. 
+Mobile device and POS terminal sends and receives encrypted data between devices. AcousticPay uses UTAB technology, complete throughput of 2,000 bit per second to send and receive encrypted audio data. 
+Each audio message has four parts, the Initiator, PublicKey, Header and Payload.  </p>
     <h2>Get Started</h2>
     <ul>
       <li>Explore our <a href="docs/">documentation</a></li>
-      <li>Check out the <a href="https://github.com/acousticpay/acousticpay.github.io">project on GitHub</a></li>
       <li>Contact us for more information or support</li>
     </ul>
-    <h2>Contribute</h2>
-    <p>
-      We welcome contributions! Feel free to open issues or submit pull requests on our <a href="https://github.com/acousticpay/acousticpay.github.io">GitHub repository</a>.
-    </p>
+
   </main>
   <footer>
     &copy; 2025 AcousticPay. All rights reserved.
