--- a/index.html
+++ b/index.html
@@ -53,20 +53,17 @@
   </header>
   <main>
 
-    <h2>How AcousticPay works? </h2>
+    <h2>About AcousticPay </h2>
     <p>
-
-      AcousticPay technology bi-directional approach to exchange sensitive payment credentials. In this approach, both party uses same levels of security, Transport Layer Security. 
-
-  </br>
-    
-      A client having AcousticPay application initiates a mobile payment through their mobile device. Using the  State of the Art technology of AcousticPay, ultrasonic or in-audible data transmission occurs, through, a secure tri-communication among the mobile device, server and POS (Point of Sale) terminal via microphone and speaker. 
-Mobile device and POS terminal sends and receives encrypted data between devices. AcousticPay uses UTAB technology, complete throughput of 2,000 bit per second to send and receive encrypted audio data. 
-Each audio message has four parts, the Initiator, PublicKey, Header and Payload.  </p>
+AcousticPay enables secure, bi-directional mobile payments using ultrasonic (inaudible) audio communication.
+It employs Transport Layer Security (TLS) across mobile, server, and POS devices via microphones and speakers.
+Encrypted data is exchanged using UTAB technology at 2,000 bps, ensuring safe and fast transactions.
+Each audio message contains Initiator, PublicKey, Header, and Payload for robust authentication and data transfer.
+       </p>
     <h2>Get Started</h2>
     <ul>
       <li>Explore our <a href="docs/">documentation</a></li>
-      <li>Contact us for more information or support</li>
+      <li>Contact us <a href="contactus.html">documentation</a> for more information or support</li>
     </ul>
 
   </main>
