--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Each audio message contains Initiator, PublicKey, Header, and Payload for robust
     <h2>Get Started</h2>
     <ul>
       <li>Explore our <a href="docs/">documentation</a></li>
-      <li>Contact us <a href="contact.php">contact us</a> for more information or support</li>
+      <li><a href="contact.php">Contact Us</a> for more information or support</li>
     </ul>
 
   </main>
