--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Each audio message contains Initiator, PublicKey, Header, and Payload for robust
        </p>
     <h2>Get Started</h2>
     <ul>
-      <li>Explore our <a href="docs/">documentation</a></li>
+      <li>Explore our <a href="AcousticPayDocV-0-0-1.pdf">documentation for further detail.</a></li>
       <li><a href="mailto:adam.hopkins.cc@gmail.com?subject=Hello AcousticPay&body=Write your message here">Contact Us</a> for more information or support</li>
 
     </ul>
