--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 <body>
   <header>
     <h1>Welcome to AcousticPay</h1>
-    <p>AcousticPay is an Artificial Intelligence driven Top Notch Audible Payment System for B2B</p>
+    <p>AcousticPay is an Artificial Intelligence driven Top Notch Audio Based Payment System for B2B</p>
   </header>
   <main>
 
     <h2>About AcousticPay </h2>
-    <p>
-AcousticPay enables secure, bi-directional mobile payments using ultrasonic (inaudible) audio communication.
+    <p align="center">
+AcousticPay which is an AI driven top notch Audio based Transaction system that enables secure, bi-directional mobile payments using ultrasonic (inaudible) audio communication.
 It employs Transport Layer Security (TLS) across mobile, server, and POS devices via microphones and speakers.
 Encrypted data is exchanged using UTAB technology at 2,000 bps, ensuring safe and fast transactions.
 Each audio message contains Initiator, PublicKey, Header, and Payload for robust authentication and data transfer.
