--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main>
 
     <h2>About AcousticPay </h2>
-    <p align="center">
+    <p align="justify">
 AcousticPay which is an AI driven top notch Audio based Transaction system that enables secure, bi-directional mobile payments using ultrasonic (inaudible) audio communication.
 It employs Transport Layer Security (TLS) across mobile, server, and POS devices via microphones and speakers.
 Encrypted data is exchanged using UTAB technology at 2,000 bps, ensuring safe and fast transactions.
